<resources>
    <string name="app_name">Marketing sample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_store">Store</string>
    <string name="categories">Categories:</string>
    <string name="phone">Phone</string>
    <string name="laptop">Laptop</string>
    <string name="car">Car</string>
    <string name="add_to_basket">Add to basket:</string>
    <string name="iphone_12_pro">iPhone 12 Pro</string>
    <string name="galaxy_s20">Galaxy S20</string>
    <string name="xiaomi_redmi_note_4">Xiaomi Redmi Note 4</string>
    <string name="search_stuff">Search stuff</string>
    <string name="search">Search</string>
    <string name="email_address">Email address</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="kill_me_threw_an_exception">Kill Me (Threw an exception)</string>
</resources>