<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StoreFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textStyle="bold"
                android:text="@string/add_to_basket"
                />
            <Button
                android:id="@+id/button_iphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iphone_12_pro"
                />

            <Button
                android:id="@+id/button_galaxy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galaxy_s20"
                />

            <Button
                android:id="@+id/button_xiaomi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xiaomi_redmi_note_4"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>