<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textStyle="bold"
                    android:text="@string/categories"
                    />
                <Button
                    android:id="@+id/button_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    />

                <Button
                    android:id="@+id/button_laptop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/laptop"
                    />

                <Button
                    android:id="@+id/button_car"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car"
                     />

            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>